# databricks-data-engineering

./: .gitignore  AGENTS.md  README.md
.beads/: issues.jsonl
.claude/: settings.local.json
eda/: pyproject.toml  taxi-weather-eda.ipynb
example_pipeline/: .gitignore  README.md  databricks.yml  pyproject.toml
example_pipeline/fixtures/: sample_trips.json  sample_weather.json
example_pipeline/resources/: example_pipeline_etl.pipeline.yml  sample_job.job.yml  weather_integration.job.yml
example_pipeline/src/: fetch_weather_notebook.ipynb  sample_notebook.ipynb
example_pipeline/src/example_pipeline/: main.py  weather.py  weather_cli.py
example_pipeline/src/example_pipeline_etl/: README.md
example_pipeline/src/example_pipeline_etl/explorations/: weather_impact_exploration.qmd
example_pipeline/src/example_pipeline_etl/transformations/: sample_trips_example_pipeline.py  sample_zones_example_pipeline.py  weather_data_source.py  weather_impact_metrics.py  weather_taxi_join.py  weather_taxi_join_buggy.py
example_pipeline/tests/: sample_taxis_test.py  test_data_quality.py  test_weather_fetch.py
slides/: .gitignore  custom.scss  webinar.qmd
